src/App.css
html {
  overflow: hidden;
}

.tile {
  box-sizing: border-box;
  display: inline-block;
  width: 2.5vw;
  height: 2.5vw;
  margin: -3px 0px;
  transition: all 0.2s ease-out;
}

.tile-empty {
  opacity: 0.4;
  border: 1px solid #4cc9f0;
}

.tile-start {
  background-color: #3a0ca3;
}

.tile-start:hover {
  transition-duration: 0s;
  background-color: #340b94;
}

.tile-end {
  background-color: #ff4699;
}

.tile-end:hover {
  transition-duration: 0s;
  background-color: #ff0073;
}

.tile-wall {
  border: solid 1px #646464;
  background-color: #3a3a3a;
}

.tile-visited {
  opacity: 0.7;
  background-color: #4cc9f0;
  border: 1px solid #a7eaff;
}

.tile-visited:hover {
  transition-duration: 0s;
  background-color: #22beee;
}

.tile-picked {
  opacity: 0.6;
}

.tile-group {
  width: 90vw;
  margin: auto;
}

.panel {
  height: 15vh;
  width: 50%;
  margin: auto;
  display: flex;
  justify-content: space-around;
  align-items: center;
}

